
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct pthread_close {char* slp_pthread; int sock_pointer; } ;


 int atoi (char*) ;
 int close (int) ;
 int exit (int) ;
 int printf (char*) ;
 int sleep (int) ;

void close_func(void *c) {

 struct pthread_close *my_close;

 char *slp_tmp;
 int slp,
     err,
     sock_p;

 my_close = (struct pthread_close *) c;
 slp_tmp = my_close->slp_pthread;
 sock_p = my_close->sock_pointer;

 slp = atoi(slp_tmp);

 sleep(slp+1);

 if((err = close(sock_p)) < 0) {
  printf("close_func: Can`t close socket\n");
  exit(-1);
 }


}
