; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_1671.c_close_func.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_1671.c_close_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pthread_close = type { i8*, i32 }

@.str = private unnamed_addr constant [32 x i8] c"close_func: Can`t close socket\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @close_func(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.pthread_close*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = bitcast i8* %8 to %struct.pthread_close*
  store %struct.pthread_close* %9, %struct.pthread_close** %3, align 8
  %10 = load %struct.pthread_close*, %struct.pthread_close** %3, align 8
  %11 = getelementptr inbounds %struct.pthread_close, %struct.pthread_close* %10, i32 0, i32 0
  %12 = load i8*, i8** %11, align 8
  store i8* %12, i8** %4, align 8
  %13 = load %struct.pthread_close*, %struct.pthread_close** %3, align 8
  %14 = getelementptr inbounds %struct.pthread_close, %struct.pthread_close* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  store i32 %15, i32* %7, align 4
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @atoi(i8* %16)
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  %19 = add nsw i32 %18, 1
  %20 = call i32 @sleep(i32 %19)
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @close(i32 %21)
  store i32 %22, i32* %6, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %1
  %25 = call i32 @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  %26 = call i32 @exit(i32 -1) #3
  unreachable

27:                                               ; preds = %1
  ret void
}

declare dso_local i32 @atoi(i8*) #1

declare dso_local i32 @sleep(i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @printf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
